force-app/main/default/objects/Action__c/Action__c.object-meta.xml
<CustomObject>
    <label>Acción</label>
    <nameField>
        <label>Acción</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Acciones</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>