force-app/main/default/objects/Action__c/fields/Dateclose__c.field-meta.xml
<CustomField>
    <fullName>Dateclose__c</fullName>
    <label>Fecha de cierre</label>
    <type>Date</type>
</CustomField>