force-app/main/default/objects/Action__c/fields/DateValidation__c.field-meta.xml
<CustomField>
    <fullName>DateValidation__c</fullName>
    <label>Fecha validacion</label>
    <type>Date</type>
</CustomField>