force-app/main/default/objects/Action__c/fields/DaysToEndDate__c.field-meta.xml
<CustomField>
    <fullName>DaysToEndDate__c</fullName>
    <formula>EndDate__c  - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to EndDate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>