force-app/main/default/objects/Action__c/fields/Is_Cancel__c.field-meta.xml
<CustomField>
    <fullName>Is_Cancel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Cancel</label>
    <type>Checkbox</type>
</CustomField>