force-app/main/default/objects/Action__c/fields/Task_LK__c.field-meta.xml
<CustomField>
    <fullName>Task_LK__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Task</label>
    <referenceTo>SSC__c</referenceTo>
    <relationshipLabel>Action Plan</relationshipLabel>
    <relationshipName>Actions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>