force-app/main/default/objects/Action__c/recordTypes/Cancel.recordType-meta.xml
<RecordType>
    <fullName>Cancel</fullName>
    <active>true</active>
    <label>Cancel</label>
</RecordType>