force-app/main/default/objects/Action__c/validationRules/Canceled_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Canceled_Status</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
(   ISPICKVAL( PRIORVALUE(Status__c), &quot;Cancelada&quot;)    ),
ISCHANGED( Status__c )
)</errorConditionFormula>
    <errorMessage>Una acción &quot;Cancelada&quot; no se puede modificar</errorMessage>
</ValidationRule>