force-app/main/default/objects/Action__c/validationRules/EndDate_after_Today.validationRule-meta.xml
<ValidationRule>
    <fullName>EndDate_after_Today</fullName>
    <active>true</active>
    <errorConditionFormula>EndDate__c  &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>EndDate__c</errorDisplayField>
    <errorMessage>La fecha de Compromiso debe ser posterior al día de hoy.</errorMessage>
</ValidationRule>