force-app/main/default/objects/Action__c/validationRules/In_Progress_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>In_Progress_Status</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( PRIORVALUE(Status__c) , &apos;En Proceso&apos;) , ISPICKVAL(Status__c, &apos;Validada&apos;) )</errorConditionFormula>
    <errorMessage>Una acción En Proceso solo puede cambiar a: Abierta, Cerrada o Cancelada.</errorMessage>
</ValidationRule>