force-app/main/default/objects/Action__c/validationRules/New_Action_is_Open.validationRule-meta.xml
<ValidationRule>
    <fullName>New_Action_is_Open</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISNEW() , NOT(ISPICKVAL( Status__c , &quot;Abierta&quot;)) )</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Una Acción debe crearse en estado &quot;Abierta&quot;</errorMessage>
</ValidationRule>