force-app/main/default/objects/Action__c/validationRules/Open_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Open_Status</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISPICKVAL( PRIORVALUE(Status__c) , &apos;Abierta&apos;) , ISPICKVAL(Status__c, &apos;Validada&apos;) )</errorConditionFormula>
    <errorMessage>Una acción Abierta solo puede cambiar a: En Proceso, Cerrada o Cancelada.</errorMessage>
</ValidationRule>