force-app/main/default/objects/Action__c/validationRules/SSC_Validated.validationRule-meta.xml
<ValidationRule>
    <fullName>SSC_Validated</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW()  &amp;&amp;  ISPICKVAL( Task_LK__r.Status__c , &apos;Validado&apos;)</errorConditionFormula>
    <errorMessage>La tarea de seguimiento corporativo se encuentra en estado validada. 
No esta permitido añadir nuevas acciones.</errorMessage>
</ValidationRule>