force-app/main/default/objects/Action__c/validationRules/Update_Title_and_Description.validationRule-meta.xml
<ValidationRule>
    <fullName>Update_Title_and_Description</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISNEW()),  OR(ISCHANGED( Name ),  ISCHANGED( Description__c )))</errorConditionFormula>
    <errorMessage>Los campos Acción y Descripción no pueden editarse. Si ha cometido un error, proceda a cancelar la acción y cree una nueva.</errorMessage>
</ValidationRule>