force-app/main/default/objects/Action__c/validationRules/Validated_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Validated_Status</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
( ISPICKVAL( PRIORVALUE(Status__c), &quot;Validada&quot;) ), 
ISCHANGED( Status__c ) 
)</errorConditionFormula>
    <errorMessage>Una acción &quot;Validada&quot; no se puede modificar</errorMessage>
</ValidationRule>