force-app/main/default/objects/Action__c/listViews/My_Actions.listView-meta.xml
<ListView>
    <fullName>My_Actions</fullName>
    <columns>NAME</columns>
    <columns>Task_LK__c</columns>
    <columns>Status__c</columns>
    <columns>EndDate__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Actions</label>
</ListView>